Add new features

--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="Shopping list that you always have at hand">
     <link href="styles/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="https://kit.fontawesome.com/861d2051b9.js" crossorigin="anonymous"></script>
     <title>Grocery List</title>
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <h1 class="title">Grocery List</h1>
-            <div class="form">
-                <input type="text" required placeholder="Eg. Bananas" minlength="3" maxlength="25" class="form__list">
-                <button type="submit" class="button__add">Add</button>
-            </div>
-
-            <div class="card__error">
-                <p id="card__error-message"></p>
-            </div>
-
-            <div id="card__list">
-            </div>
-
-            <div class="footer">
-                <button type="reset" class="footer__button">Clear All</button>
-            </div>
-        </div>
+<div class="container">
+    <main class="card">
+        <h1 class="title">Grocery List</h1>
+    <div class="form">
+        <input type="text" required placeholder="Eg. Bananas" minlength="3" maxlength="25" class="form__list">
+        <button type="submit" class="form__add">Add</button>
     </div>
+
+    <div class="card__error">
+        <p id="card__error-message"></p>
+    </div>
+
+    <div id="card__list">
+        <i class="fa-solid fa-pen-to-square card__icon" style="display: none"></i>
+        <i class="fa-solid fa-trash-can card__icon" style="display: none"></i>
+    </div>
+
+    <footer class="footer">
+        <button type="reset" class="footer__button">Clear All</button>
+    </footer>
+    </main>
+</div>
     <script src="js/main.js"></script>
 </body>
 </html>
