Add new features and code refactoring

--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 <body>
 <div class="container">
     <main class="card">
-        <h1 class="title">Grocery List</h1>
+        <h1 class="card__title">Grocery List</h1>
     <div class="form">
         <input type="text" required placeholder="Eg. Bananas" minlength="3" maxlength="25" class="form__list">
         <button type="submit" class="form__add">Add</button>
     </div>
 
     <div class="card__error">
-        <p id="card__error-message"></p>
+        <p id="card__error-message">
+        </p>
     </div>
 
     <div id="card__list">
-        <i class="fa-solid fa-pen-to-square card__icon" style="display: none"></i>
-        <i class="fa-solid fa-trash-can card__icon" style="display: none"></i>
     </div>
 
     <footer class="footer">
